ip6tables.conf
*filter

-F INPUT
-F FILTERS
-F BLOCK

-A INPUT -i lo -j ACCEPT
-A INPUT -s ::1/128 ! -i lo -j REJECT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -j FILTERS
-A INPUT -j BLOCK
-A FILTERS -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -m tcp -p tcp --dport 22 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -m tcp -p tcp --dport 80 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -m tcp -p tcp --dport 443 -j ACCEPT
-A FILTERS -m conntrack --ctstate NEW -m udp -p udp --dport 51820 -j ACCEPT
-A FILTERS -m conntrack --ctstate INVALID -j DROP
-A FILTERS -j BLOCK
-A FORWARD -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -o wg0 -j ACCEPT
-A OUTPUT -j ACCEPT
-A BLOCK -j REJECT
COMMIT
